Fix CSS class for expand/collapse all links in review guidelines

--- a/project/media/styles/review.css
+++ b/project/media/styles/review.css
@@ -31,7 +31,6 @@ body.review .guidelines > section > h1 {
 
 body.review .guidelines a.expand-all,
 body.review .guidelines a.collapse-all {
-  padding-bottom: 2px;
   margin-left: 5px;
 }
 
